@@ -1,9 +1,8 @@
 package br.com.fiap.techchallenge.infra.web.controller;
 
 import br.com.fiap.techchallenge.core.domain.model.Order;
-import br.com.fiap.techchallenge.core.usecase.in.order.CreateOrderCommand;
-import br.com.fiap.techchallenge.core.usecase.in.order.UpdateOrderCommand;
-import br.com.fiap.techchallenge.core.usecase.impl.order.OrderManagementUseCase;
+import br.com.fiap.techchallenge.core.usecase.in.order.*;
+//import br.com.fiap.techchallenge.core.usecase.impl.order.OrderManagementUseCase;
 import br.com.fiap.techchallenge.infra.web.dto.order.CreateOrderRequest;
 import br.com.fiap.techchallenge.infra.web.dto.order.CreateOrderResponseDTO;
 import br.com.fiap.techchallenge.infra.web.dto.order.UpdateOrderRequest;
@@ -19,10 +18,19 @@ import java.util.stream.Collectors;
 @RequestMapping("/orders")
 public class OrderController {
 
-    private final OrderManagementUseCase orderManagementUseCase;
+    private final CreateOrderUseCase createOrderUseCase;
+    private final GetOrderByIdUseCase getOrderByIdUseCase;
+    private final ListOrdersUseCase listOrdersUseCase;
+    private final UpdateOrderUseCase updateOrderUseCase;
+    private final DeleteOrderUseCase deleteOrderUseCase;
 
-    public OrderController(OrderManagementUseCase orderManagementUseCase) {
-        this.orderManagementUseCase = orderManagementUseCase;
+    public OrderController(CreateOrderUseCase createOrderUseCase, GetOrderByIdUseCase getOrderByIdUseCase, ListOrdersUseCase listOrdersUseCase, UpdateOrderUseCase updateOrderUseCase, DeleteOrderUseCase deleteOrderUseCase) {
+        this.createOrderUseCase = createOrderUseCase;
+        this.getOrderByIdUseCase = getOrderByIdUseCase;
+        this.listOrdersUseCase = listOrdersUseCase;
+        this.updateOrderUseCase = updateOrderUseCase;
+        this.deleteOrderUseCase = deleteOrderUseCase;
+
     }
 
     // --- CREATE ---
@@ -30,18 +38,31 @@ public class OrderController {
     public ResponseEntity<CreateOrderResponseDTO> create(@RequestBody CreateOrderRequest request) {
 
         CreateOrderCommand command = OrderWebMapper.toCommand(request);
-        Order created = orderManagementUseCase.create(command);
+        Order created = createOrderUseCase.execute(command);
 
         return ResponseEntity.ok(OrderResponseMapper.from(created));
+    }
+
+    // --- LIST BY ID ---
+    @GetMapping("/{orderId}")
+    public ResponseEntity<CreateOrderResponseDTO> getById(@PathVariable String orderId) {
+
+        Order order = getOrderByIdUseCase.execute(orderId);
+
+        return ResponseEntity.ok(
+                OrderResponseMapper.from(order)
+        );
     }
 
     // --- LIST ALL ---
     @GetMapping
     public ResponseEntity<List<CreateOrderResponseDTO>> list() {
-        List<Order> orders = orderManagementUseCase.listAll();
+        List<Order> orders = listOrdersUseCase.execute();
+
         List<CreateOrderResponseDTO> response = orders.stream()
                 .map(OrderResponseMapper::from)
-                .collect(Collectors.toList());
+                .toList();
+
         return ResponseEntity.ok(response);
     }
 
@@ -52,7 +73,7 @@ public class OrderController {
             @RequestBody UpdateOrderRequest request) {
 
         UpdateOrderCommand command = OrderWebMapper.toUpdateCommand(request);
-        Order updated = orderManagementUseCase.update(orderId, command);
+        Order updated = updateOrderUseCase.execute(orderId, command);
 
         return ResponseEntity.ok(OrderResponseMapper.from(updated));
     }
@@ -60,7 +81,7 @@ public class OrderController {
     // --- DELETE ---
     @DeleteMapping("/{orderId}")
     public ResponseEntity<Void> delete(@PathVariable String orderId) {
-        orderManagementUseCase.delete(orderId);
+        deleteOrderUseCase.execute(orderId);
         return ResponseEntity.noContent().build();
     }
 }
